# together_ai_client

./: Cargo.toml  README.md
prompts/: prompt_example.txt
src/: args.rs  constants.rs  embeddings.rs  main.rs  models.rs  rest_client.rs
