[package]
name = "together_ai_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-client = "0.12.2"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.21"
serde_json = "1.0.111"
dotenvy = "0.15.7"
clap = { version = "4.4.13", features = ["derive"] }
reqwest = "0.11.23"
